feat: latest change to api spec
